--- a/blog.html
+++ b/blog.html
@@ -10,22 +10,19 @@
     <!-----Head start here----->
     <header class="head">
         <div class="head">
-            <img class="logo" src="Images\image.webp">
-            <h1>Neo Fitness Gym</h1>
+          <img class="logo" src="Images\image.webp" />
+          <h1>Neo Fitness Gym</h1>
         </div>
         <nav>
-            <li>
-                <a class="nav-bar" href="homepage.html">Home</a>
-                <a class="nav-bar" href="nutrition.html">Nutrition</a>
-                <a class="nav-bar" href="blog.html">Blog</a>
-                <a class="nav-bar" href="index.html">Logout</a>
-            </li>
+            <a href="homepage.html">Home</a>
+            <a href="nutrition.html">Nutrition</a>
+            <a href="blog.html">Blog</a>
+            <a href="index.html">Logout</a>
         </nav>
-        
-    </header>
+    </header> 
     <!-----Head End  here----->
     <div class="container-1">
-        <p class="para">Bodyweight exercises are simple, effective ways to improve balance, flexibility, and strength without gym machines or 
+        <p class="center">Bodyweight exercises are simple, effective ways to improve balance, flexibility, and strength without gym machines or 
             equipment. You can do all these bodyweight exercises at home.From legs and shoulders to chest and abs, we’ve covered every part of 
             your body that can get stronger with body resistance alone.</p>
         <div class="container-1-a">
