--- a/homepage.html
+++ b/homepage.html
@@ -14,12 +14,10 @@
         <h1>Neo Fitness Gym</h1>
       </div>
       <nav>
-        <li>
-          <a class="nav-bar" href="homepage.html">Home</a>
-          <a class="nav-bar" href="nutrition.html">Nutrition</a>
-          <a class="nav-bar" href="blog.html">Blog</a>
-          <a class="nav-bar" href="index.html">Logout</a>
-        </li>
+          <a href="homepage.html">Home</a>
+          <a href="nutrition.html">Nutrition</a>
+          <a href="blog.html">Blog</a>
+          <a href="index.html">Logout</a>
       </nav>
     </header>
     <!-----Head End  here----->
