--- a/nutrition.html
+++ b/nutrition.html
@@ -9,18 +9,15 @@
     <!-----Head start here----->
     <header class="head">
         <div class="head">
-            <img class="logo" src="Images\image.webp">
-            <h1>Neo Fitness Gym</h1>
+          <img class="logo" src="Images\image.webp" />
+          <h1>Neo Fitness Gym</h1>
         </div>
         <nav>
-            <li>
-                <a class="nav-bar" href="homepage.html">Home</a>
-                <a class="nav-bar" href="nutrition.html">Nutrition</a>
-                <a class="nav-bar" href="blog.html">Blog</a>
-                <a class="nav-bar" href="index.html">Logout</a>
-            </li>
+            <a href="homepage.html">Home</a>
+            <a href="nutrition.html">Nutrition</a>
+            <a href="blog.html">Blog</a>
+            <a href="index.html">Logout</a>
         </nav>
-        
     </header>
     <!-----Head End  here----->
     <div class="container-1">
