change layout and colour scheme

--- a/blog.html
+++ b/blog.html
@@ -9,17 +9,17 @@
 <body>
     <!-----Head start here----->
     <header class="head">
+      
         <div class="head">
           <img class="logo" src="Images\image.webp" />
-          <h1>Neo Fitness Gym</h1>
+          <h1>GYM TEMPLATE </h1>
         </div>
         <nav>
-            <a href="homepage.html">Home</a>
-            <a href="nutrition.html">Nutrition</a>
-            <a href="blog.html">Blog</a>
-            <a href="index.html">Logout</a>
+            <a href="index.html">HOME</a>
+            <a href="nutrition.html">NUTRITION</a>
+            <a href="blog.html">BLOG</a>
         </nav>
-    </header> 
+      </header>
     <!-----Head End  here----->
     <div class="container-1">
         <p class="center">Bodyweight exercises are simple, effective ways to improve balance, flexibility, and strength without gym machines or 
@@ -102,21 +102,21 @@
         <div>
           <h2>Follow us on</h2>
           <div>
-            <a style="color: white" href="#">Instagram</a><br />
-            <a style="color: white" href="#">Facebook</a><br />
-            <a style="color: white" href="#">Twitter</a>
+            <a class="footer-1" href="#">Instagram</a><br />
+            <a class="footer-1" href="#">Facebook</a><br />
+            <a class="footer-1" href="#">Twitter</a>
           </div>
         </div>
         <div>
           <h2>Opening Time</h2>
-          <p>
+          <p class="footer-1">
             Mon to Sat : 5:00 A.M. to 11 P.M. <br />Sunday: 5:00 A.M. to 11:00
             A.M.
           </p>
         </div>
         <div>
           <h2>Address</h2>
-          <p>
+          <p class="footer-1">
             12A street, Green Avenue, Opp.- HDFC Bank,<br />Amritsar, Punjab,
             India
           </p>
