--- a/nutrition.html
+++ b/nutrition.html
@@ -8,17 +8,17 @@
 <body>
     <!-----Head start here----->
     <header class="head">
+      
         <div class="head">
           <img class="logo" src="Images\image.webp" />
-          <h1>Neo Fitness Gym</h1>
+          <h1>GYM TEMPLATE </h1>
         </div>
         <nav>
-            <a href="homepage.html">Home</a>
-            <a href="nutrition.html">Nutrition</a>
-            <a href="blog.html">Blog</a>
-            <a href="index.html">Logout</a>
+            <a href="index.html">HOME</a>
+            <a href="nutrition.html">NUTRITION</a>
+            <a href="blog.html">BLOG</a>
         </nav>
-    </header>
+      </header>
     <!-----Head End  here----->
     <div class="container-1">
         <h1>Nutrition</h1>
@@ -81,27 +81,64 @@
                 </div>
             </a>
         </div>
+        <div class="container-2-g">
+            <a class="inner-flex a-link" href="#">
+                <img class="image" src="Images\Nutrition\3.webp">
+                <div class="padding">
+                    <h2 style="color:black">13 Subscription Boxes That Bring Health Foods to You</h2>
+                    <p style="color:black">Treat yourself to fewer trips to the grocery store and a kitchen full of healthy food with…</p>
+                </div>
+            </a>
+        </div>
+        <div class="container-2-h">
+            <a class="inner-flex a-link" href="#">
+                <img class="image" src="Images\Nutrition\1.webp">
+                <div class="padding">
+                    <h2 style="color:black">10 Healthy Eating Habits from Around the World</h2>
+                    <p style="color:black">The Mediterranean diet isn’t the only global cuisine worth copying. Enjoy some healthy…</p>
+                </div>
+            </a>
+        </div>
+        <div class="container-2-i">
+            <a class="inner-flex a-link" href="#">
+                <img class="image" src="Images\Nutrition\2.webp">
+                <div class="padding">
+                    <h2 style="color:black">75+ Healthy Foods for Back-to-Basics Wellness</h2>
+                    <p style="color:black">We've even got you covered at Trader Joe's.</p>
+                </div>
+            </a>
+        </div>
+        <div class="container-2-j">
+        <a class="inner-flex a-link" href="#">
+            <img class="image" src="Images\Nutrition\4.webp">
+            <div class="padding">
+                <h2 style="color:black">Best Brain Foods: Why Your Brain Loves Chocolate, Coffee, and More</h2>
+                <p style="color:black">This is your brain on chocolate.</p>
+            </div>
+        </a>
+        </div>
+       
     </div>
     <!-----Footer start here----->
     <footer>
         <div>
           <h2>Follow us on</h2>
           <div>
-            <a style="color: white" href="#">Instagram</a><br />
-            <a style="color: white" href="#">Facebook</a><br />
-            <a style="color: white" href="#">Twitter</a>
+            <a class="footer-1" href="#">Instagram</a><br />
+            <a class="footer-1" href="#">Facebook</a><br />
+            <a class="footer-1" href="#">Twitter</a>
           </div>
         </div>
         <div>
           <h2>Opening Time</h2>
-          <p>
+          <p class="footer-1">
             Mon to Sat : 5:00 A.M. to 11 P.M. <br />Sunday: 5:00 A.M. to 11:00
             A.M.
           </p>
         </div>
         <div>
           <h2>Address</h2>
-          <p>
+          <p class="footer-1">
             12A street, Green Avenue, Opp.- HDFC Bank,<br />Amritsar, Punjab,
             India
           </p>
