--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!-----Head start here----->
+    <div class="red-line"></div>
     <header class="head">
       
         <div class="head">
@@ -23,16 +24,20 @@
         </nav>
       </header>
     <!-----Head End  here----->
+    <div class="container">
+      <h2>Exercises</h2>
+      <p>Bodyweight exercises are simple, effective ways to improve balance, flexibility, and strength without gym machines or 
+        equipment. You can do all these bodyweight exercises at home.</p>
+    </div>
     <div class="container-1">
-        <p class="center">Bodyweight exercises are simple, effective ways to improve balance, flexibility, and strength without gym machines or 
-            equipment. You can do all these bodyweight exercises at home.From legs and shoulders to chest and abs, we’ve covered every part of 
-            your body that can get stronger with body resistance alone.</p>
         <div class="container-1-a">
+          <div>
             <a href="#"><img src="Images\Blog\1.jpg" class="image"></a>
             <h2 class="heading">Arm circles</h2>
             <p class="para">Stand with your arms extended by your sides, perpendicular to your torso.
                 Slowly make clockwise circles about 1 foot in diameter for 20—30 seconds.
                 Then reverse the movement, going counterclockwise....<a href="#">Read More</a></p>
+          </div>
             <div class="date-comment">
                 <div><img class="date" src="Images\Blog\calender.png">2 Nov, 2022</div>  
                 <div><img class="comment" src="Images\Blog\comment.png">4</div>
@@ -58,7 +63,7 @@
                 Make sure your heels do not rise off the floor.
                 Press through your heels to return to a standing position....<a href="#">Read More</a></p>
                 <div class="date-comment">
-                    <div><img class="date" src="Images\Blog\calender.png">11 JUly, 2022</div>  
+                    <div class="date-align"><img class="date" src="Images\Blog\calender.png">11 JUly, 2022</div>  
                     <div><img class="comment" src="Images\Blog\comment.png">40</div>
                 </div> 
         </div>
