--- a/nutrition.html
+++ b/nutrition.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!-----Head start here----->
+    <div class="red-line"></div>
     <header class="head">
-      
         <div class="head">
           <h1>GYM TEMPLATE </h1>
         </div>
@@ -23,8 +23,8 @@
       </header>
     <!-----Head End  here----->
     <div class="container-1">
-        <h1>Nutrition</h1>
-        <p>Everything You Need to Know About Using Food to Fuel<br> Your Body and Feel Your Best</p>
+        <h2>Nutrition</h2>
+        <p>Everything You Need to Know About Using Food to Fuel Your Body and Feel Your Best</p>
     </div>
     <div class="container-2">
         <div class="container-2-a">
